--- a/Labs/Lab10/code/Makefile
+++ b/Labs/Lab10/code/Makefile
@@ -1,9 +1,25 @@
-default: main.c more-code.c codeheader.h
-	gcc -Wall main.c -o main.o -c
-	gcc -Wall more-code.c -o more-code.o -c
-create: main.o more-code.o
-	gcc -Wall -o program *.o
-dothings: program
-	./program
-cleanup: 
-	rm *.o
+# This is an example of a Makefile for Java in Linux
+#       I recommend to compare this to the Makefile-C example given
+#               since it has more thorough comments
+
+# define java compiler & java program
+#   Note: it would be better to do an absolute path to javac & java
+JCC = javac
+JV = java
+
+# define compilation flag(s)
+#   -g compiles with debugging information
+JFLAGS = -g
+
+# default action of my makefile (because this is first)
+#       pre-req is that demo.java exists
+default: demo.java
+	$(JCC) $(JFLAGS) demo.java
+
+# defining target (or command to be used with make) to run my program
+execute: demo.class
+	$(JV) demo
+
+# defining target to delete my compiled program
+delete:
+	rm demo.class
