--- a/processes/Makefile
+++ b/processes/Makefile
@@ -1,5 +1,11 @@
-default:
+default: zombie.c pids.c orphan.c fork.c
 	gcc -Wall zombie.c -o zombie
 	gcc -Wall pids.c -o pids
 	gcc -Wall orphan.c -o orphan
 	gcc -Wall fork.c -o forky
+
+remove: 
+	rm zombie
+	rm pids
+	rm orphan
+	rm forky
