--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,5 @@
-theme: jekyll-theme-minimal
+remote_theme: pages-themes/cayman@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
 title: CEG - 2350 OS Concepts & Usage 
 description: Bookmark this to keep an eye on CEG 2350 updates!
