--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,14 +1,14 @@
-remote_theme: pages-themes/cayman@v0.2.0
-plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
-title: CEG - 2350 OS Concepts & Usage 
-description: Bookmark this to keep an eye on CEG 2350 updates!
-sidebar:
-  - label: Labs
-    children:
-      - lab-01
-      - document-two
-      - document-three
-navigation:
-  - name: Home
-    link: /
+# remote_theme: pages-themes/cayman@v0.2.0
+# plugins:
+# - jekyll-remote-theme # add this line to the plugins list if you already have one
+# title: CEG - 2350 OS Concepts & Usage 
+# description: Bookmark this to keep an eye on CEG 2350 updates!
+# sidebar:
+#   - label: Labs
+#     children:
+#       - lab-01
+#       - document-two
+#       - document-three
+# navigation:
+#   - name: Home
+#     link: /
