--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,18 +1,8 @@
-remote_theme: pages-themes/cayman@v0.2.0
+title: CEG 2350
+#logo: assets/images/kastle-gradient.png
+description: Operating Systems Concepts & Design
+show_downloads: false
+
+remote_theme: pages-themes/minimal@v0.2.0
 plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
-title: CEG - 2350 OS Concepts & Usage 
-description: Bookmark this to keep an eye on CEG 2350 updates!
-sidebar:
-  - label: Labs
-    children:
-      - lab-01
-      - document-two
-      - document-three
-navigation:
-  - name: Home
-    link: /
-
-
-# title: CEG 2350
-# description: Test Content
+    - jekyll-remote-theme
