--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -3,6 +3,7 @@ title: CEG 2350
 description: Operating Systems Concepts & Design
 show_downloads: false
 
-remote_theme: pages-themes/minimal@v0.2.0
+remote_theme: pages-themes/dinky@v0.2.0
+#remote_theme: pages-themes/minimal@v0.2.0
 plugins:
     - jekyll-remote-theme
