--- a/.github/workflows/ghpages.yml
+++ b/.github/workflows/ghpages.yml
@@ -28,6 +28,10 @@ jobs:
 
   # Deployment job
   deploy:
+    permissions:
+      contents: read
+      pages: write
+      id-token: write
     environment:
       name: github-pages
       url: ${{steps.deployment.outputs.page_url}}
