--- a/.github/workflows/ghpages.yml
+++ b/.github/workflows/ghpages.yml
@@ -21,8 +21,9 @@ jobs:
       - name: Build with Jekyll
         uses: actions/jekyll-build-pages@v1
         with:
-          source: ./
-          destination: ./_site
+          path: docs/
+          #source: ./docs/
+          #destination: ./_site
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
 
